# aoc-2021

./: .clang-format  .clang-tidy  .cmake-format.json  .dir-locals.el  .gitignore  CMakeLists.txt  LICENSE  README
C/: .clang-tidy  AdventConfig.h.cin  CMakeLists.txt  DayConfig.h.cin
C/Include/Advent/: Advent.h  Hash.h  Vector.h
C/Source/Advent/: Advent.c  Hash.c
C/Source/Day01/: Main.c
C/Source/Day02/: Main.c
C/Source/Day03/: Main.c
C/Source/Day04/: Main.c
C/Source/Day05/: Main.c
C2/: .clang-tidy  CMakeLists.txt  Config.h.cin
C2/Advent/Include/Advent/: Core.h  Files.h
C2/Advent/Source/: Core.c  Files.c
C2/Days/Source/: Day01.c
CMake Modules/: PushDirectory.cmake
Nim/Day01/: Main.nim
Rust/day01/src/: main.rs
Rust/day02/: Cargo.toml
Rust/day02/src/: main.rs
